[package]
name = "rockers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
indicatif = "0.18.4"
nix = { version = "0.31.2", features = ["hostname", "sched"] }
reqwest = { version = "0.13.2", features = ["query", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"
